--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,30 @@
 {
   "version": 2,
-  "name": "notes-app",
-  "functions": {
-    "backend/src/server.js": {
-      "runtime": "@vercel/node@18"
-    }
-  },
-  "rewrites": [
+  "name": "store",
+  "builds": [
     {
-      "source": "/api/(.*)",
-      "destination": "backend/src/server.js"
+      "src": "backend/src/server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
-  "outputDirectory": "frontend/dist"
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "backend/src/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "frontend/dist/$1"
+    }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
